; ModuleID = '/home/carl/AnghaBench/openssl/providers/implementations/macs/extr_gmac_prov.c_gmac_final.c'
source_filename = "/home/carl/AnghaBench/openssl/providers/implementations/macs/extr_gmac_prov.c_gmac_final.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gmac_data_st = type { i32 }

@EVP_CTRL_AEAD_GET_TAG = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*, i64*, i64)* @gmac_final to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @gmac_final(i8* %0, i8* %1, i64* %2, i64 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i64*, align 8
  %9 = alloca i64, align 8
  %10 = alloca %struct.gmac_data_st*, align 8
  %11 = alloca i32, align 4
  store i8* %0, i8** %6, align 8
  store i8* %1, i8** %7, align 8
  store i64* %2, i64** %8, align 8
  store i64 %3, i64* %9, align 8
  %12 = load i8*, i8** %6, align 8
  %13 = bitcast i8* %12 to %struct.gmac_data_st*
  store %struct.gmac_data_st* %13, %struct.gmac_data_st** %10, align 8
  store i32 0, i32* %11, align 4
  %14 = load %struct.gmac_data_st*, %struct.gmac_data_st** %10, align 8
  %15 = getelementptr inbounds %struct.gmac_data_st, %struct.gmac_data_st* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = load i8*, i8** %7, align 8
  %18 = call i32 @EVP_EncryptFinal_ex(i32 %16, i8* %17, i32* %11)
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %21, label %20

20:                                               ; preds = %4
  store i32 0, i32* %5, align 4
  br label %36

21:                                               ; preds = %4
  %22 = call i32 (...) @gmac_size()
  store i32 %22, i32* %11, align 4
  %23 = load %struct.gmac_data_st*, %struct.gmac_data_st** %10, align 8
  %24 = getelementptr inbounds %struct.gmac_data_st, %struct.gmac_data_st* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = load i32, i32* @EVP_CTRL_AEAD_GET_TAG, align 4
  %27 = load i32, i32* %11, align 4
  %28 = load i8*, i8** %7, align 8
  %29 = call i32 @EVP_CIPHER_CTX_ctrl(i32 %25, i32 %26, i32 %27, i8* %28)
  %30 = icmp ne i32 %29, 0
  br i1 %30, label %32, label %31

31:                                               ; preds = %21
  store i32 0, i32* %5, align 4
  br label %36

32:                                               ; preds = %21
  %33 = load i32, i32* %11, align 4
  %34 = sext i32 %33 to i64
  %35 = load i64*, i64** %8, align 8
  store i64 %34, i64* %35, align 8
  store i32 1, i32* %5, align 4
  br label %36

36:                                               ; preds = %32, %31, %20
  %37 = load i32, i32* %5, align 4
  ret i32 %37
}

declare dso_local i32 @EVP_EncryptFinal_ex(i32, i8*, i32*) #1

declare dso_local i32 @gmac_size(...) #1

declare dso_local i32 @EVP_CIPHER_CTX_ctrl(i32, i32, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
